Add character encoding (UTF-8).  Now polish characters  are available.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://mysql.agh.edu.pl:3306/kapmat
+spring.datasource.url=jdbc:mysql://mysql.agh.edu.pl:3306/kapmat?characterEncoding=UTF-8
 spring.datasource.username=kapmat
 spring.datasource.password=kapmatphp
 
