--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
-spring.datasource.url=jdbc:mysql://mysql.agh.edu.pl:3306/kapmat?characterEncoding=UTF-8
-spring.datasource.username=kapmat
-spring.datasource.password=kapmatphp
+#spring.datasource.url=jdbc:mysql://mysql.agh.edu.pl:3306/kapmat?characterEncoding=UTF-8
+spring.datasource.url=jdbc:mysql://localhost:3306/kapmat?characterEncoding=UTF-8
+spring.datasource.username=root
+spring.datasource.password=pass
 
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.initialize=true
