Add Angular to the project. Add basic routing.

--- a/src/main/bower.json
+++ b/src/main/bower.json
@@ -3,6 +3,9 @@
 	"autor": "Mateusz Kaproń",
 	"version": "1.0.0",
 	"dependencies": {
-		"angular": "~1.4.9"
+		"angular": "~1.4.9",
+		"angular-resource": "~1.4.9",
+		"angular-route": "~1.4.9",
+		"jquery": "~2.2.0"
 	}
 }
