--- a/src/main/bower.json
+++ b/src/main/bower.json
@@ -7,6 +7,10 @@
     "angular-resource": "~1.4.9",
     "angular-route": "~1.4.9",
     "jquery": "~2.2.0",
-    "angular-material": "^1.1.3"
+    "angular-material": "^1.1.3",
+    "angular-spinner": "1.0.1",
+    "d3": "3.5.17",
+    "angular-ui-router": "1.0.0-rc.1",
+    "spin-js": "2.0.1"
   }
 }
