--- a/src/main/bower.json
+++ b/src/main/bower.json
@@ -11,7 +11,8 @@
     "angular-spinner": "1.0.1",
     "d3": "3.5.17",
     "angular-ui-router": "1.0.0-rc.1",
-    "spin-js": "2.0.1"
+    "spin-js": "2.0.1",
+    "ng-scrollbar": "^0.0.8"
   },
   "resolutions": {
     "angular": "^1.4.8"
